<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="trackerViewModel"
            type="com.firstdecision.tracker.screens.tracker_settings.TrackerViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/tk_logo_iot"
                    android:layout_width="130dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="10dp"
                    android:contentDescription="@string/desc_logo_iot"
                    android:src="@drawable/iot_4decision"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/tk_btn_info"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginEnd="30dp"
                    android:background="@drawable/ic_information_line"
                    android:backgroundTint="@color/colorBluePrimary"
                    app:layout_constraintBottom_toBottomOf="@+id/tk_logo_iot"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/tk_logo_iot" />

                <LinearLayout
                    android:id="@+id/tk_layout_panel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@color/colorBluePrimary"
                    android:gravity="center"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tk_logo_iot">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="2"
                        android:layout_marginTop="30dp"
                        android:contentDescription="@string/desc_logo_tracker"
                        android:src="@drawable/icon_tracker" />

                    <TextView
                        style="@style/TitleWhite"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_marginTop="15dp"
                        android:layout_weight="1"
                        android:text="@string/txt_welcome"
                        android:textSize="18sp" />
                </LinearLayout>

                <TextView
                    android:id="@+id/tk_txt_serial"
                    style="@style/TextViewBold"
                    android:labelFor="@id/tk_et_serial"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="30dp"
                    android:text="@string/txt_serial_number"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tk_layout_panel" />

                <EditText
                    android:id="@+id/tk_et_serial"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/marginInputsRL"
                    android:layout_marginEnd="@dimen/marginInputsRL"
                    android:layout_marginTop="15dp"
                    android:enabled="true"
                    android:inputType="text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tk_txt_serial"
                    android:autofillHints="false"
                    style="@style/EditText"/>


                <TextView
                    android:id="@+id/tk_txt_permissions"
                    style="@style/TextViewBold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="30dp"
                    android:text="@string/txt_config_permissions"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="@+id/tk_txt_serial"
                    app:layout_constraintTop_toBottomOf="@id/tk_et_serial" />

                <TextView
                    android:id="@+id/tk_txt_gps"
                    style="@style/TextViewRegular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="@string/txt_gps_use"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="@+id/tk_txt_permissions"
                    app:layout_constraintTop_toBottomOf="@+id/tk_txt_permissions" />

                <Switch
                    android:id="@+id/tk_switch_gps"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="30dp"
                    app:layout_constraintBottom_toBottomOf="@+id/tk_txt_gps"
                    app:layout_constraintEnd_toEndOf="parent" />

                <View
                    android:id="@+id/tk_view_divider2"
                    style="@style/Divider"
                    android:layout_width="match_parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tk_txt_gps" />

                <TextView
                    android:id="@+id/tk_txt_bluetooth"
                    style="@style/TextViewRegular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"
                    android:text="@string/txt_bluetooth_use"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/tk_txt_gps"
                    app:layout_constraintTop_toBottomOf="@+id/tk_view_divider2" />

                <Switch
                    android:id="@+id/tk_switch_bluetooth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="30dp"
                    app:layout_constraintBottom_toBottomOf="@+id/tk_txt_bluetooth"
                    app:layout_constraintEnd_toEndOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

        <LinearLayout
            android:id="@+id/tk_layout_footer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorGreyPrimary"
            android:gravity="center"
            android:padding="10dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">
            <ImageView
                android:contentDescription="@string/desc_logo_first_decision"
                android:layout_width="70dp"
                android:layout_height="30dp"
                android:src="@drawable/first_decision"
                />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
